# Simple-Calculator

./: CMakeLists.txt  DEVTOOL-EXAMPLES.md  DEVTOOL-GUIDE.md  DEVTOOL-SUMMARY.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE-GUIDE.md  compare-versions.sh  demo.sh  devtool-test.sh  devtool-upgrade.sh  meson.build  version.h.in
.github/workflows/: release.yml  version-bump.yml
bitbake-recipes/: simple-calculator-versioned.bb  simple-calculator_1.0.0.bb  simple-calculator_1.1.0.bb  simple-calculator_git.bb  test-upgrade.sh
fail_app/: CMakeLists.txt
main/: main_calc.cpp  operations.hpp
main/calculator/: calculator.cpp  calculator.hpp
main/calculator/operations/: operations.cpp  operations.hpp
succeed_app/: CMakeLists.txt
system-test/: CMakeLists.txt  calc_system_test.cpp
test/: CMakeLists.txt  calc_test.cpp
